--- a/src/css/Collapse.css
+++ b/src/css/Collapse.css
@@ -12,10 +12,11 @@
 
 .visible.collapse ul {
     color: #000;
-    padding: 36px 27px 19px 18px;
+    padding: 40px 30px 25px 30px;
     margin: 0;
     text-align: justify;
     list-style-type: none;
+    line-height: 160%;
 }
 
 .collapse-header {
@@ -34,6 +35,7 @@
 
 .collapse-header span {
     padding-right: auto;
+    font-weight: 700;
 }
 /* affiche le contenu */
 .visible {
