--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -30,3 +30,10 @@
         font-size: 12px; 
     }
 }
+
+@media (max-width: 768px) {
+    .break {
+      display: block;
+    }
+  }
+  
