--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -31,7 +31,6 @@
 
 .navbar ul li:hover {
     cursor: pointer;
-    text-shadow: 0px 0px 2px rgba(244, 5, 5, 0.418);
 }
 
 
